Refere to github when jvm memory allocation is not high enough instead of logging out of context sbt ops